# rulid-cli

./: Cargo.toml  README.md  devshell.toml  flake.nix
.github/workflows/: build.yaml
src/: main.rs
