[package]
name = "rulid"
version = "0.1.2"
edition = "2021"
author = "Christian Kemper"
homepage = "https://github.com/ck3mper/rulid-cli"
description = "A CLI tool to generate ULIDs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
ulid = "1.0.0"
